@@ -74,7 +74,7 @@ KModuleList;
 
 static KModuleList *KModules = NULL;
 
-void
+void 
 KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 {
 
@@ -97,7 +97,7 @@ KDE_ClientMessage(Window win, Atom atom, long data, Time timestamp)
 
 }
 
-void
+void 
 KDE_ClientTextMessage(Window win, Atom atom, char *data)
 {
 
@@ -119,7 +119,7 @@ KDE_ClientTextMessage(Window win, Atom atom, char *data)
 
 }
 
-void
+void 
 KDE_SendMessagesToModules(Atom atom, long data)
 {
 
@@ -138,7 +138,7 @@ KDE_SendMessagesToModules(Atom atom, long data)
 
 }
 
-void
+void 
 KDE_UpdateFocusedWindow(void)
 {
 
@@ -149,21 +149,29 @@ KDE_UpdateFocusedWindow(void)
    ewin = GetFocusEwin();
    if (ewin)
      {
-	XChangeProperty(disp, root.win, KDE_ACTIVE_WINDOW, KDE_ACTIVE_WINDOW, 32,
-			PropModeReplace, (unsigned char *)&(ewin->win), 1);
+	XChangeProperty(disp, root.win, KDE_ACTIVE_WINDOW, KDE_ACTIVE_WINDOW,
+			32, PropModeReplace, (unsigned char *)&(ewin->win), 1);
      }
    else
      {
-	XChangeProperty(disp, root.win, KDE_ACTIVE_WINDOW, KDE_ACTIVE_WINDOW, 32,
-			PropModeReplace, (unsigned char *)NULL, 1);
+	XChangeProperty(disp, root.win, KDE_ACTIVE_WINDOW, KDE_ACTIVE_WINDOW,
+			32, PropModeReplace, (unsigned char *)NULL, 1);
+     }
 
+   if (ewin)
+     {
+	KDE_SendMessagesToModules(KDE_MODULE_WIN_ACTIVATE, ewin->win);
+     }
+   else
+     {
+	KDE_SendMessagesToModules(KDE_MODULE_WIN_ACTIVATE, 0);
      }
 
    EDBUG_RETURN_;
 
 }
 
-void
+void 
 KDE_AddModule(Window win)
 {
 
@@ -245,7 +253,7 @@ KDE_AddModule(Window win)
 
 }
 
-void
+void 
 KDE_RemoveModule(Window win)
 {
 
@@ -300,7 +308,7 @@ KDE_RemoveModule(Window win)
 
 }
 
-void
+void 
 KDE_Init(void)
 {
    /*
@@ -416,7 +424,7 @@ KDE_Init(void)
 
 }
 
-void
+void 
 KDE_Shutdown(void)
 {
 
@@ -443,7 +451,7 @@ KDE_Shutdown(void)
 
 }
 
-void
+void 
 KDE_ClientInit(Window win)
 {
 
@@ -472,7 +480,7 @@ KDE_ClientInit(Window win)
 
 }
 
-void
+void 
 KDE_ClientChange(Window win, XPropertyEvent * event)
 {
 
@@ -549,7 +557,7 @@ KDE_ClientChange(Window win, XPropertyEvent * event)
 
 }
 
-void
+void 
 KDE_GetDecorationHint(Window win, long *dechints)
 {
 
@@ -618,7 +626,7 @@ KDE_GetDecorationHint(Window win, long *dechints)
 
 }
 
-void
+void 
 KDE_CheckClientHints(Window win)
 {
 
@@ -641,7 +649,7 @@ KDE_CheckClientHints(Window win)
 
 }
 
-int
+int 
 KDE_WindowCommand(EWin * ewin, char *cmd)
 {
 
@@ -697,7 +705,7 @@ KDE_WindowCommand(EWin * ewin, char *cmd)
 
 }
 
-void
+void 
 KDE_Command(char *cmd, XClientMessageEvent * event)
 {
 
@@ -776,7 +784,7 @@ KDE_Command(char *cmd, XClientMessageEvent * event)
 
 }
 
-void
+void 
 KDE_ProcessClientMessage(XClientMessageEvent * event)
 {
 
@@ -830,7 +838,7 @@ KDE_ProcessClientMessage(XClientMessageEvent * event)
 
 }
 
-void
+void 
 KDE_ModuleAssert(Window win)
 {
 
@@ -844,7 +852,7 @@ KDE_ModuleAssert(Window win)
 
 }
 
-void
+void 
 KDE_PrepModuleEvent(Window win, KMessage msg)
 {
 
@@ -893,14 +901,13 @@ KDE_PrepModuleEvent(Window win, KMessage msg)
 
 }
 
-void
+void 
 KDE_SetRootArea(void)
 {
 
    EDBUG(6, "KDE_SetRootArea");
 
    setSimpleHint(root.win, KDE_CURRENT_DESKTOP, desks.current + 1);
-   setSimpleHint(root.win, KDE_NUMBER_OF_DESKTOPS, mode.numdesktops);
 
    KDE_SendMessagesToModules(KDE_MODULE_DESKTOP_CHANGE, desks.current + 1);
 
@@ -908,7 +915,21 @@ KDE_SetRootArea(void)
 
 }
 
-void
+void 
+KDE_SetNumDesktops(void)
+{
+
+   EDBUG(6, "KDE_SetRootArea");
+
+   setSimpleHint(root.win, KDE_NUMBER_OF_DESKTOPS, mode.numdesktops);
+
+   KDE_SendMessagesToModules(KDE_MODULE_DESKTOP_NUMBER_CHANGE,
+			     mode.numdesktops);
+
+   EDBUG_RETURN_;
+}
+
+void 
 KDE_HintChange(Atom a)
 {
 
